include/draper.h


typedef enum DraperResult {
  Success = 0,
  InvalidArgument = -1,
  FileNotFound = -2,
  ParseError = -3,
  GeometryError = -4,
  TopologyError = -5,
  TriangulationError = -6,
  OutOfMemory = -7,
  UnknownError = -99,
} DraperResult;
typedef struct DraperDocument DraperDocument;
typedef struct DraperMesh DraperMesh;
const char *draper_get_last_error(void);
uint32_t draper_version_major(void);
uint32_t draper_version_minor(void);
uint32_t draper_version_patch(void);
const char *draper_version_string(void);
bool draper_has_feature(const char *feature);
struct DraperDocument *draper_document_new(const char *name);
void draper_document_free(struct DraperDocument *doc);
enum DraperResult draper_document_add_box(struct DraperDocument *doc,
                                          double dx,
                                          double dy,
                                          double dz);
enum DraperResult draper_document_add_cylinder(struct DraperDocument *doc,
                                               double radius,
                                               double height);
enum DraperResult draper_document_add_sphere(struct DraperDocument *doc, double radius);
enum DraperResult draper_document_add_cone(struct DraperDocument *doc,
                                           double radius,
                                           double height);
enum DraperResult draper_document_add_torus(struct DraperDocument *doc,
                                            double major_radius,
                                            double minor_radius);
enum DraperResult draper_document_add_engine(struct DraperDocument *doc);
struct DraperMesh *draper_document_triangulate(struct DraperDocument *doc);
void draper_mesh_free(struct DraperMesh *mesh);
uint32_t draper_mesh_vertex_count(const struct DraperMesh *mesh);
uint32_t draper_mesh_triangle_count(const struct DraperMesh *mesh);
uint32_t draper_mesh_get_vertices(const struct DraperMesh *mesh, double *out, uint32_t max_count);
uint32_t draper_mesh_get_triangles(const struct DraperMesh *mesh,
                                   uint32_t *out,
                                   uint32_t max_count);
enum DraperResult draper_mesh_export_stl(const struct DraperMesh *mesh,
                                         const char *path,
                                         int32_t binary);
enum DraperResult draper_document_export_step(struct DraperDocument *doc, const char *path);
uint32_t draper_document_solid_count(const struct DraperDocument *doc);
double draper_solid_volume(const struct DraperDocument *doc);
double draper_solid_surface_area(const struct DraperDocument *doc);
enum DraperResult draper_validate_step(const struct DraperDocument *doc);
enum DraperResult draper_export_gltf(const struct DraperDocument *doc, const char *path);
enum DraperResult draper_export_obj(const struct DraperDocument *doc, const char *path);
enum DraperResult draper_export_3mf(const struct DraperDocument *doc, const char *path);
enum DraperResult draper_document_translate(struct DraperDocument *doc,
                                            double dx,
                                            double dy,
                                            double dz);
enum DraperResult draper_document_rotate(struct DraperDocument *doc,
                                         double ax,
                                         double ay,
                                         double az,
                                         double angle);
enum DraperResult draper_document_rotate_around_point(struct DraperDocument *doc,
                                                      double ax,
                                                      double ay,
                                                      double az,
                                                      double cx,
                                                      double cy,
                                                      double cz,
                                                      double angle);
enum DraperResult draper_document_scale(struct DraperDocument *doc, double factor);
enum DraperResult draper_document_scale_around_point(struct DraperDocument *doc,
                                                     double factor,
                                                     double cx,
                                                     double cy,
                                                     double cz);
enum DraperResult draper_document_mirror(struct DraperDocument *doc,
                                         double ox,
                                         double oy,
                                         double oz,
                                         double nx,
                                         double ny,
                                         double nz);
enum DraperResult draper_solid_fillet_edge(struct DraperDocument *doc,
                                           uintptr_t solid_index,
                                           uintptr_t edge_index,
                                           double radius);
enum DraperResult draper_solid_chamfer_edge(struct DraperDocument *doc,
                                            uintptr_t solid_index,
                                            uintptr_t edge_index,
                                            double distance);
enum DraperResult draper_solid_make_shell(struct DraperDocument *doc,
                                          uintptr_t solid_index,
                                          double thickness);
enum DraperResult draper_document_boolean_union(struct DraperDocument *doc,
                                                uintptr_t a_index,
                                                uintptr_t b_index,
                                                uint32_t *out_index);
enum DraperResult draper_document_boolean_subtract(struct DraperDocument *doc,
                                                   uintptr_t a_index,
                                                   uintptr_t b_index,
                                                   uint32_t *out_index);
enum DraperResult draper_document_boolean_intersect(struct DraperDocument *doc,
                                                    uintptr_t a_index,
                                                    uintptr_t b_index,
                                                    uint32_t *out_index);
enum DraperResult draper_document_delete_solid(struct DraperDocument *doc, uintptr_t index);
enum DraperResult draper_document_load_step(struct DraperDocument *doc,
                                            const char *path,
                                            uint8_t _heal);
enum DraperResult draper_document_circular_pattern(struct DraperDocument *doc,
                                                   uintptr_t solid_index,
                                                   uintptr_t count,
                                                   double ax,
                                                   double ay,
                                                   double az);
enum DraperResult draper_document_linear_pattern(struct DraperDocument *doc,
                                                 uintptr_t solid_index,
                                                 uintptr_t count,
                                                 double dx,
                                                 double dy,
                                                 double dz,
                                                 double step);
enum DraperResult draper_solid_add_circular_hole(struct DraperDocument *doc,
                                                 uintptr_t solid_index,
                                                 uintptr_t face_index,
                                                 double cx,
                                                 double cy,
                                                 double cz,
                                                 double radius);
enum DraperResult draper_solid_remove_hole(struct DraperDocument *doc,
                                           uintptr_t solid_index,
                                           uintptr_t face_index,
                                           uintptr_t hole_index);
uint32_t draper_solid_clear_holes(struct DraperDocument *doc,
                                  uintptr_t solid_index,
                                  uintptr_t face_index);