bindings/python/draper.py

# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (c) 2026 KernelDev
"""
Python bindings for the 3Draper kernel via ctypes.

Usage:
    from draper import Document, DraperError

    doc = Document("MyModel")
    doc.add_box(1.0, 2.0, 3.0)
    vol = doc.volume()
    doc.export_gltf("output.glb")
    doc.close()

The shared library (libdraper_ffi.so / draper_ffi.dll) must be on the
library search path, or you can pass an explicit path:

    from draper import load_library
    load_library("/path/to/libdraper_ffi.so")
"""

import ctypes
import os
import platform
from typing import Optional

# ============================================================
# DraperResult error codes
# ============================================================

class DraperResult:
    """C-compatible result codes returned by every FFI function."""
    SUCCESS = 0
    INVALID_ARGUMENT = -1
    FILE_NOT_FOUND = -2
    PARSE_ERROR = -3
    GEOMETRY_ERROR = -4
    TOPOLOGY_ERROR = -5
    TRIANGULATION_ERROR = -6
    OUT_OF_MEMORY = -7
    UNKNOWN_ERROR = -99

    _MESSAGES = {
        0: "Success",
        -1: "Invalid argument",
        -2: "File not found",
        -3: "Parse error",
        -4: "Geometry error",
        -5: "Topology error",
        -6: "Triangulation error",
        -7: "Out of memory",
        -99: "Unknown error",
    }

    @staticmethod
    def message(code: int) -> str:
        return DraperResult._MESSAGES.get(code, f"Unknown result code: {code}")


# ============================================================
# Custom exception
# ============================================================

class DraperError(Exception):
    """Exception raised when a 3Draper FFI call returns an error."""

    def __init__(self, code: int, message: str = ""):
        self.code = code
        self.message = message or DraperResult.message(code)
        super().__init__(f"DraperError({code}): {self.message}")


# ============================================================
# Library loading
# ============================================================

_lib: Optional[ctypes.CDLL] = None


def _find_library_path() -> str:
    """Attempt to locate the shared library automatically."""
    system = platform.system()
    if system == "Linux":
        names = ["libdraper_ffi.so"]
    elif system == "Darwin":
        names = ["libdraper_ffi.dylib"]
    elif system == "Windows":
        names = ["draper_ffi.dll"]
    else:
        names = ["libdraper_ffi.so"]

    # Check relative to this file
    base_dir = os.path.dirname(os.path.abspath(__file__))
    for name in names:
        candidate = os.path.join(base_dir, name)
        if os.path.exists(candidate):
            return candidate

    # Check target directory (Rust build output)
    for name in names:
        candidate = os.path.join(base_dir, "..", "..", "target", "debug", name)
        if os.path.exists(candidate):
            return os.path.abspath(candidate)
        candidate = os.path.join(base_dir, "..", "..", "target", "release", name)
        if os.path.exists(candidate):
            return os.path.abspath(candidate)

    # Fall back to system library path
    return names[0]


def load_library(path: str) -> None:
    """Load the 3Draper shared library from the given path."""
    global _lib
    _lib = ctypes.CDLL(path)
    _setup_bindings()


def _get_lib() -> ctypes.CDLL:
    """Get or lazily load the shared library."""
    global _lib
    if _lib is None:
        load_library(_find_library_path())
    return _lib


def _check_result(code: int) -> None:
    """Raise DraperError if the result code is not Success."""
    if code != DraperResult.SUCCESS:
        lib = _get_lib()
        err_ptr = lib.draper_get_last_error()
        if err_ptr:
            msg = ctypes.cast(err_ptr, ctypes.c_char_p).value
            msg = msg.decode("utf-8", errors="replace") if msg else ""
        else:
            msg = ""
        raise DraperError(code, msg)


# ============================================================
# C function prototype declarations
# ============================================================

def _setup_bindings() -> None:
    """Set up ctypes argument and return types for all C API functions."""
    lib = _get_lib()

    # Version
    lib.draper_version_major.argtypes = []
    lib.draper_version_major.restype = ctypes.c_uint32
    lib.draper_version_minor.argtypes = []
    lib.draper_version_minor.restype = ctypes.c_uint32
    lib.draper_version_patch.argtypes = []
    lib.draper_version_patch.restype = ctypes.c_uint32
    lib.draper_version_string.argtypes = []
    lib.draper_version_string.restype = ctypes.c_char_p

    # Feature detection
    lib.draper_has_feature.argtypes = [ctypes.c_char_p]
    lib.draper_has_feature.restype = ctypes.c_bool

    # Error
    lib.draper_get_last_error.argtypes = []
    lib.draper_get_last_error.restype = ctypes.c_char_p

    # Document
    lib.draper_document_new.argtypes = [ctypes.c_char_p]
    lib.draper_document_new.restype = ctypes.c_void_p
    lib.draper_document_free.argtypes = [ctypes.c_void_p]
    lib.draper_document_free.restype = None
    lib.draper_document_solid_count.argtypes = [ctypes.c_void_p]
    lib.draper_document_solid_count.restype = ctypes.c_uint32

    # Shape builders
    lib.draper_document_add_box.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_add_box.restype = ctypes.c_int32
    lib.draper_document_add_cylinder.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double]
    lib.draper_document_add_cylinder.restype = ctypes.c_int32
    lib.draper_document_add_sphere.argtypes = [ctypes.c_void_p, ctypes.c_double]
    lib.draper_document_add_sphere.restype = ctypes.c_int32
    lib.draper_document_add_cone.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double]
    lib.draper_document_add_cone.restype = ctypes.c_int32
    lib.draper_document_add_torus.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double]
    lib.draper_document_add_torus.restype = ctypes.c_int32
    lib.draper_document_add_engine.argtypes = [ctypes.c_void_p]
    lib.draper_document_add_engine.restype = ctypes.c_int32

    # Triangulation
    lib.draper_document_triangulate.argtypes = [ctypes.c_void_p]
    lib.draper_document_triangulate.restype = ctypes.c_void_p

    # Mesh
    lib.draper_mesh_free.argtypes = [ctypes.c_void_p]
    lib.draper_mesh_free.restype = None
    lib.draper_mesh_vertex_count.argtypes = [ctypes.c_void_p]
    lib.draper_mesh_vertex_count.restype = ctypes.c_uint32
    lib.draper_mesh_triangle_count.argtypes = [ctypes.c_void_p]
    lib.draper_mesh_triangle_count.restype = ctypes.c_uint32
    lib.draper_mesh_get_vertices.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_double), ctypes.c_uint32]
    lib.draper_mesh_get_vertices.restype = ctypes.c_uint32
    lib.draper_mesh_get_triangles.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_uint32), ctypes.c_uint32]
    lib.draper_mesh_get_triangles.restype = ctypes.c_uint32
    lib.draper_mesh_export_stl.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_int32]
    lib.draper_mesh_export_stl.restype = ctypes.c_int32

    # STEP export
    lib.draper_document_export_step.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.draper_document_export_step.restype = ctypes.c_int32

    # Analytical queries
    lib.draper_solid_volume.argtypes = [ctypes.c_void_p]
    lib.draper_solid_volume.restype = ctypes.c_double
    lib.draper_solid_surface_area.argtypes = [ctypes.c_void_p]
    lib.draper_solid_surface_area.restype = ctypes.c_double

    # Validation
    lib.draper_validate_step.argtypes = [ctypes.c_void_p]
    lib.draper_validate_step.restype = ctypes.c_int32

    # Export convenience
    lib.draper_export_gltf.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.draper_export_gltf.restype = ctypes.c_int32
    lib.draper_export_obj.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.draper_export_obj.restype = ctypes.c_int32
    lib.draper_export_3mf.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.draper_export_3mf.restype = ctypes.c_int32

    # STEP load (extended)
    lib.draper_document_load_step.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_uint8]
    lib.draper_document_load_step.restype = ctypes.c_int32

    # Editing ops
    lib.draper_solid_fillet_edge.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.c_double]
    lib.draper_solid_fillet_edge.restype = ctypes.c_int32
    lib.draper_solid_chamfer_edge.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.c_double]
    lib.draper_solid_chamfer_edge.restype = ctypes.c_int32
    lib.draper_solid_make_shell.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_double]
    lib.draper_solid_make_shell.restype = ctypes.c_int32

    # Transform ops
    lib.draper_document_translate.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_translate.restype = ctypes.c_int32
    lib.draper_document_rotate.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_rotate.restype = ctypes.c_int32
    lib.draper_document_rotate_around_point.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_rotate_around_point.restype = ctypes.c_int32
    lib.draper_document_scale.argtypes = [ctypes.c_void_p, ctypes.c_double]
    lib.draper_document_scale.restype = ctypes.c_int32
    lib.draper_document_scale_around_point.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_scale_around_point.restype = ctypes.c_int32
    lib.draper_document_mirror.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_mirror.restype = ctypes.c_int32

    # Boolean ops
    lib.draper_document_boolean_union.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.POINTER(ctypes.c_uint32)]
    lib.draper_document_boolean_union.restype = ctypes.c_int32
    lib.draper_document_boolean_subtract.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.POINTER(ctypes.c_uint32)]
    lib.draper_document_boolean_subtract.restype = ctypes.c_int32
    lib.draper_document_boolean_intersect.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.POINTER(ctypes.c_uint32)]
    lib.draper_document_boolean_intersect.restype = ctypes.c_int32
    lib.draper_document_delete_solid.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    lib.draper_document_delete_solid.restype = ctypes.c_int32

    # Patterns
    lib.draper_document_circular_pattern.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_circular_pattern.restype = ctypes.c_int32
    lib.draper_document_linear_pattern.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_document_linear_pattern.restype = ctypes.c_int32

    # Holes
    lib.draper_solid_add_circular_hole.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
    lib.draper_solid_add_circular_hole.restype = ctypes.c_int32
    lib.draper_solid_remove_hole.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t, ctypes.c_size_t]
    lib.draper_solid_remove_hole.restype = ctypes.c_int32
    lib.draper_solid_clear_holes.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t]
    lib.draper_solid_clear_holes.restype = ctypes.c_uint32
